# keyvn-patcher

./: .gitignore  NOTES.md  README.md  helper.py  main.py  main.spec  pyproject.toml
dependencies/: pakutil-v0.2.1-a6-linux  xdelta3-v3.1.0-linux
source/auxiliary-files/: LITBUS_WIN32.xdelta
source/battle-done/: BT_AN  BT_FC_CGHR10A  BT_FC_CGHR15A  BT_FC_CGHR21A  BT_FC_CGHR24B  BT_FC_CGHR50  BT_FC_CGHR51  BT_FC_CGKD10H  BT_FC_CGKD12H1  BT_FC_CGKD15H  BT_FC_CGKD18H  BT_FC_CGKD24H3  BT_FC_CGKD40  BT_FC_CGKG10  BT_FC_CGKG10A  BT_FC_CGKG10B  BT_FC_CGKG10C  BT_FC_CGKG11  BT_FC_CGKG11A  BT_FC_CGKG11B  BT_FC_CGKG11C  BT_FC_CGKG13  BT_FC_CGKG13A  BT_FC_CGKG13B  BT_FC_CGKG13C  BT_FC_CGKG15  BT_FC_CGKG15A  BT_FC_CGKG15B  BT_FC_CGKG15C  BT_FC_CGKG20  BT_FC_CGKG20A  BT_FC_CGKG20B  BT_FC_CGKG20C  BT_FC_CGKG21  BT_FC_CGKG21A  BT_FC_CGKG21B  BT_FC_CGKG21C  BT_FC_CGKM11  BT_FC_CGKM15  BT_FC_CGKM31H  (+86 more)
source/bgcg-done/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  (+195 more)
source/charcg-done/: 10001  10002  10003  10004  10005  10006  10007  10008  10009  10010  10011  10012  10013  10014  10015  10016  10017  10018  10019  10020  10021  10022  10023  10024  10025  10026  10027  10028  10029  10030  10031  10032  10033  10034  10035  10036  10037  10038  10039  10040  (+1858 more)
source/eventcg-done/: 1051  1052  1053  1054  1055  1056  1112  1174  1175  1176  1181  1227  1228  1229  1230  1253  1254  1255  1256  1261  1266  1267
source/gencg-done/: 55001  (+96 more)
(+42 files in other folders)
