[project]
name = "LBEE_Restoration_Patch"
version = "1.1.0"
description = "Restore the original look and feel of 'Little Busters English Edition'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gooey>=1.0.8.1",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
    "six>=1.17.0",
]
